--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF8">
+    <!-- レスポンシブ対応 -->
+    <meta name="viewport" content="initial-scale=1.0">
+
     <title>chapter9</title>
     <link rel="stylesheet" href="style.css">
   </head>
